# ToolKit

./: .gitignore  README.md
.github/workflows/: CI.yml  release.yml
ToolKit/: CMakeLists.txt  TookKit.pro  ToolKit.pro  databasemanager.cpp  databasemanager.h  delete.sh  mainpage.ui  res.qrc  set.ini  widget.cpp  widget.h
ToolKit/3rd_partty/: lib.pri
ToolKit/data/: face.db
ToolKit/include/: commonbase.h  commondialog.h  commonutils.h  databasemanager.h  fmtlogin.h  mainpage.h  msgrecord.h  wearthermanager.h  widget.h
ToolKit/include/Mqtt/: mqttmanager.h
ToolKit/include/OpencvServer/: opencvWindow.h  qfaceobject.h  registerwin.h  selectwin.h
ToolKit/include/PDF/: generatepdf.h
ToolKit/include/QPS/: qps_calc.h
ToolKit/include/VideoPlay/: playimage.h  readthread.h  videodecode.h
ToolKit/include/Xlsx/: xlsxmanager.h
ToolKit/script/: move.bat  move.sh
ToolKit/setting/: set.ini
ToolKit/src/: commonbase.cpp  commondialog.cpp  commonutils.cpp  databasemanager.cpp  fmtlogin.cpp  main.cpp  mainpage.cpp  msgrecord.cpp  wearthermanager.cpp  widget.cpp
ToolKit/src/Mqtt/: mqttmanager.cpp
ToolKit/src/OpencvServer/: opencvWindow.cpp  qfaceobject.cpp  registerwin.cpp  selectwin.cpp
ToolKit/src/PDF/: generatepdf.cpp
ToolKit/src/QPS/: qps_calc.cpp
ToolKit/src/VideoPlay/: playimage.cpp  readthread.cpp  videodecode.cpp
ToolKit/src/Xlsx/: xlsxmanager.cpp
ToolKit/test/: test.cpp
ToolKit/ui/: MsgRecord.ui  commondialog.ui  fmtlogin.ui  mainpage.ui  widget.ui
